--- a/Proyecto3_ESP32/platformio.ini
+++ b/Proyecto3_ESP32/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.12.0
+	adafruit/Adafruit Unified Sensor@^1.1.13
+	adafruit/Adafruit MPU6050@^2.2.4
